plugins {
    id 'java'
    id 'application'
}

group 'io.github.compactrisc16.assembler'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.beust', name: 'jcommander', version: '1.81'
    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
}

sourceCompatibility = 11
targetCompatibility = 11
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

mainClassName = 'io.github.compactrisc16.assembler.Assembler'

applicationName = 'assembler'

distTar.enabled = false
distZip.enabled = false
build {
    dependsOn installDist // Creates shell scripts to run the built jars
}
